--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "devDependencies": {
     "@0x/utils": "^6.4.3",
+    "@nomicfoundation/hardhat-verify": "^2.0.13",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^3.1.0",
@@ -88,7 +89,7 @@
     "eslint-plugin-jsdoc": "^38.0.6",
     "eslint-plugin-no-null": "^1.0.2",
     "ethereum-waffle": "^3.4.0",
-    "hardhat": "^2.6.4",
+    "hardhat": "^2.6.5",
     "hardhat-contract-sizer": "^2.5.0",
     "husky": "^4.2.5",
     "istanbul-combine-updated": "^0.3.0",
@@ -107,15 +108,17 @@
     "web3": "^1.2.9"
   },
   "dependencies": {
+    "@ethersproject/providers": "^5.8.0",
+    "@openzeppelin-upgradeable/contracts": "npm:@openzeppelin/contracts-upgradeable@4.5.2",
+    "@uniswap/sdk": "^3.0.3",
     "ethers": "^5.5.2",
     "fs-extra": "^9.0.0",
     "jsbi": "^3.2.5",
     "module-alias": "^2.2.2",
     "notional-solidity-sdk": "https://github.com/ckoopmann/notional-solidity-sdk.git#77aa2f8fd8a72b8f5865e561f2d39d4606c3740c",
-    "wrapped-fcash": "https://github.com/ckoopmann/wrapped-fcash.git#6b7d870c9b750aa343f0405f3543c9bbb0e3cdfc",
     "openzeppelin-contracts-V4": "npm:@openzeppelin/contracts@4.5",
-    "@openzeppelin-upgradeable/contracts": "npm:@openzeppelin/contracts-upgradeable@4.5.2",
-    "replace-in-file": "^6.1.0"
+    "replace-in-file": "^6.1.0",
+    "wrapped-fcash": "https://github.com/ckoopmann/wrapped-fcash.git#6b7d870c9b750aa343f0405f3543c9bbb0e3cdfc"
   },
   "peerDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
